css/ereefs_aims.css
/**
 * This stylesheet is loaded in the eReefs header block.
 */

/**
 * Change the grey background to a white background
 */
body {
	background-color: #f8f8fa;
}

header div.container,
nav div.container {
  padding: 0 50px;
  max-width: 1400px;
  margin: auto;
  width: 100%;
  box-sizing: border-box;
}

header.app-header {
  background: #335b84;
}

header.app-header .container {
  height: 120px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

header.app-header .container a.aims-logo {
  flex-grow: 0;
}

header.app-header .container a.aims-logo img {
  width: 300px;
}

header.app-header .container .title {
  font-size: 2.2rem;
  font-weight: 500;
  color: #ffffff;
  line-height: 2.5rem;
}

header.app-header .container .title img.aims-logo-sml {
  margin-right: 8px;
  height: 2.5rem !important;
  vertical-align: bottom;
}

nav#app-nav-bar {
  position: relative;
  box-sizing: border-box;
  display: flex;
  background: #2c4e72;
  padding: .5rem 0;
  flex-flow: row nowrap;
  justify-content: flex-start;
}

.region-header .block-menu, .region-header .block-menu ul.menu li:hover ul {
  background-color: transparent;
}

nav {
  position: relative;
  box-sizing: border-box;
  display: flex;
  padding: .5rem 0;
  flex-flow: row nowrap;
  justify-content: flex-start;
}

nav#app-nav-bar {
  background: #2c4e72;
}

nav#app-nav-bar #app-navbar-nav {
  display: flex;
}

nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu {
  margin: 0;
  width: auto;
  flex-grow: 1;
}

nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu ul.menu li a {
  font-size: 1rem;
  padding: 0.5rem 2rem;
  height: auto;
}

nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu ul.menu li.active-trail a {
  font-weight: bold;
  text-decoration: underline;
}

nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu ul.menu li.leaf.first a {
  padding-left: 0;
}

nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu ul.menu li a:hover {
  text-decoration: underline;
}

nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu ul.menu li ul.menu {
  padding-top: 8px;
  background: #2c4e72;
}

nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu ul.menu li ul.menu li a,
nav#app-nav-bar #block-menu-menu-menu-aims-ereefs-app-menu ul.menu li ul.menu li.first a {
  padding-left: 1rem;
}

nav#app-nav-bar #block-search-form {
  margin: 0;
  width: auto;
  padding: 5px 0;
}

nav#app-nav-bar #block-search-form input.form-text {
  width: 15em;
}

nav#app-nav-bar #block-search-form input[type="submit"] {
  margin-right: 0;
}

nav#visualisation-portal-nav-bar {
  background: #ffffff;
}

nav#visualisation-portal-nav-bar a.navbar-title {
  display: inline-block;
  color: #25425f;
  padding: 0;
  margin-right: 2rem;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: inherit;
  white-space: nowrap;
  text-decoration: none;
}

nav#visualisation-portal-nav-bar #basic-navbar-nav {
  display: flex !important;
  flex-basis: auto;
  flex-grow: 1;
  align-items: center;
}

nav#visualisation-portal-nav-bar #basic-navbar-nav #block-menu-menu-menu-ereefs-aims {
  flex-direction: row;
  display: flex;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims ul.menu li a {
  font-size: 1rem;
  padding: 0.5rem 2rem;
  height: auto;
  color: #25425f;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims ul.menu li a:hover {
  text-decoration: underline;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims ul.menu li ul.menu {
  padding-top: 8px;
  background: #ffffff;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims ul.menu li ul.menu li {
  border-top: 1px dotted #25425f;
  width: 350px;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims ul.menu li ul.menu li a,
nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims ul.menu li ul.menu li.first a {
  padding-left: 1rem;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims .content {
  width: 100%;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims .eatlas-responsive-menu-container .eatlas-responsive-menu-button {
  padding: 0;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims .eatlas-responsive-menu-container ul.accordion-menu {
  margin-top: 0.4rem;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims .eatlas-responsive-menu-container ul.accordion-menu li a {
  font-size: 1rem;
  padding: 0.8rem 0.5rem;
  height: auto;
  color: #25425f;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims .eatlas-responsive-menu-container ul.accordion-menu li {
  border-top: 1px dotted #25425f;
}

nav#visualisation-portal-nav-bar #block-menu-menu-menu-ereefs-aims .eatlas-responsive-menu-container ul.accordion-menu li ul li a {
  background: #ffffff;
  padding-left: 1rem;
}

/**
 * Home page style
 * Style the block: eReefs AIMS - Large header image
 */
.large-image-header {
	line-height: 0; /* Remove the line at the bottom of the image, caused by font "descender" */
	position: relative; /* This is used to guide the image overlay */

	background-position: center center;
	background-size: 100%;
	/* height =  height / width * 100 */
	/*   = 1192 / 3880 * 100 */
	/*   = 30.72  */
	height: 30vw;
	max-height: 50vh;
}

/* Dark overlay over the image */
.large-image-header .overlay {
	background-color: #000;
	opacity: 0.3;

	/* Place it on top of ".large-image-header" <= first parent with "position: relative" */
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
}

/* Play button and text over the overlay */
/* NOTE: See "accessibility" at the bottom of the page */
.large-image-header .button-wrapper {
	display: flex;
	align-items: center;
	justify-content: center;

	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
}
/* ... */

